# Forest-Cover-Type-Prediction

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: main.yml  nox.yml
src/forest_cover_type/: data.py  nested-cv.py  nested_cv.py  pipeline.py  train.py
tests/: test_forest_cover_type.py  test_train.py  train_sample.csv
