[tool.poetry]
name = "forest-cover-type"
version = "0.1.0"
description = "RS ML project"
authors = ["Kseniya Esepkina"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
scipy = "^1.8.0"
sklearn = "^0.0"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
